crates/credential/tests/probes/credential_guard_clone.stderr
error[E0277]: the trait bound `CredentialGuard<DummySecret>: Clone` is not satisfied
  --> tests/probes/credential_guard_clone.rs:23:6
   |
23 |     <CredentialGuard<DummySecret> as Clone>::clone(g)
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `CredentialGuard<DummySecret>`
